--- a/consumables.html
+++ b/consumables.html
@@ -69,31 +69,31 @@
   <script>
     const items = [
       // Food
-      { name:"Apple", image:"TM_AppleR_E.png", tags:["Food"], notes:"+HP 0 / +Hunger 20 / +Water 10 / +Stamina 0", buy:null, sell:null },
-      { name:"Avocado (Half)", image:"TM_AvocadoHalf.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null },
-      { name:"Bacon", image:"TM_Bacon.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null },
-      { name:"Banana", image:"TM_Banana.png", tags:["Food"], notes:"+HP 5 / +Hunger 45 / +Water 15 / +Stamina 0", buy:null, sell:null },
-      { name:"Breakfast Bagel", image:"TM_BreakfastBagel.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
-      { name:"Canned Beans", image:"TM_CannedBeans_I.png", tags:["Food","Canned"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
-      { name:"Canned Molassess", image:"TM_CannedMolassess.png", tags:["Food","Canned"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
-      { name:"Canned Peaches", image:"TM_CannedPeaches_I.png", tags:["Food","Canned"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
-      { name:"Canned Soup", image:"TM_CannedSoup_I.png", tags:["Food","Canned"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
-      { name:"Cheeseburger", image:"TM_Cheeseburger.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
-      { name:"Cookie", image:"TM_Cookie1_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
-      { name:"Croissant", image:"TM_Croissant.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
-      { name:"Cupcake", image:"Cupcake_1.png", tags:["Food"], notes:"+HP 1 / +Hunger 25 / +Water 5 / +Stamina 0", buy:null, sell:null  },
-      { name:"Waffle", image:"TM_Waffle_E.png", tags:["Food"], notes:"+HP 1 / +Hunger 40 / +Water 7 / +Stamina 0", buy:null, sell:null  },
-      { name:"Dragon Fruit", image:"TM_DragonFruit_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
-      { name:"Raw Egg", image:"TM_EggRaw.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
-      { name:"Cooked Meat", image:"TM_MeatCooked_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
-      { name:"Meat Haunch (Cooked)", image:"TM_MeatHaunchCooked_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
-      { name:"Meat Haunch (Raw)", image:"TM_MeatHaunchRaw_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
-      { name:"Raw Meat", image:"TM_MeatRaw_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:null  },
-      { name:"Pizza Slice", image:"TM_PizzaSlice_E.png", tags:["Food"], notes:"+HP 0 / +Hunger 20 / +Water 0 / +Stamina 0", buy:null, sell:null  },
-      { name:"Donut", image:"TM_Donut_W.png", tags:["Food"], notes:"+HP 1 / +Hunger 25 / +Water 2 / +Stamina 0", buy:null, sell:null  },
+      { name:"Apple", image:"TM_AppleR_E.png", tags:["Food"], notes:"+HP 0 / +Hunger 20 / +Water 10 / +Stamina 0", buy:null, sell:-- },
+      { name:"Avocado (Half)", image:"TM_AvocadoHalf.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:-- },
+      { name:"Bacon", image:"TM_Bacon.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:-- },
+      { name:"Banana", image:"TM_Banana.png", tags:["Food"], notes:"+HP 5 / +Hunger 45 / +Water 15 / +Stamina 0", buy:null, sell:-- },
+      { name:"Breakfast Bagel", image:"TM_BreakfastBagel.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:--  },
+      { name:"Canned Beans", image:"TM_CannedBeans_I.png", tags:["Food","Canned"], notes:"stats unknown (official page shows ??)", buy:null, sell:--  },
+      { name:"Canned Molassess", image:"TM_CannedMolassess.png", tags:["Food","Canned"], notes:"stats unknown (official page shows ??)", buy:null, sell:--  },
+      { name:"Canned Peaches", image:"TM_CannedPeaches_I.png", tags:["Food","Canned"], notes:"stats unknown (official page shows ??)", buy:null, sell:--  },
+      { name:"Canned Soup", image:"TM_CannedSoup_I.png", tags:["Food","Canned"], notes:"stats unknown (official page shows ??)", buy:null, sell:--  },
+      { name:"Cheeseburger", image:"TM_Cheeseburger.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:--  },
+      { name:"Cookie", image:"TM_Cookie1_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:--  },
+      { name:"Croissant", image:"TM_Croissant.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:--  },
+      { name:"Cupcake", image:"Cupcake_1.png", tags:["Food"], notes:"+HP 1 / +Hunger 25 / +Water 5 / +Stamina 0", buy:null, sell:--  },
+      { name:"Waffle", image:"TM_Waffle_E.png", tags:["Food"], notes:"+HP 1 / +Hunger 40 / +Water 7 / +Stamina 0", buy:null, sell:--  },
+      { name:"Dragon Fruit", image:"TM_DragonFruit_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:--  },
+      { name:"Raw Egg", image:"TM_EggRaw.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:--  },
+      { name:"Cooked Meat", image:"TM_MeatCooked_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:--  },
+      { name:"Meat Haunch (Cooked)", image:"TM_MeatHaunchCooked_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:--  },
+      { name:"Meat Haunch (Raw)", image:"TM_MeatHaunchRaw_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:--  },
+      { name:"Raw Meat", image:"TM_MeatRaw_E.png", tags:["Food"], notes:"stats unknown (official page shows ??)", buy:null, sell:--  },
+      { name:"Pizza Slice", image:"TM_PizzaSlice_E.png", tags:["Food"], notes:"+HP 0 / +Hunger 20 / +Water 0 / +Stamina 0", buy:null, sell:--  },
+      { name:"Donut", image:"TM_Donut_W.png", tags:["Food"], notes:"+HP 1 / +Hunger 25 / +Water 2 / +Stamina 0", buy:null, sell:--  },
 
       // Beverages
-      { name:"Water Bottle", image:"TM_WaterBottle_B_E.png", tags:["Beverage"], notes:"+Water up to 100; refillable", buy:null, sell:null  },
+      { name:"Water Bottle", image:"TM_WaterBottle_B_E.png", tags:["Beverage"], notes:"+Water up to 100; refillable", buy:null, sell:--  },
 
       // Medicines (with known buy/sell from your raw)
       { name:"Medical Kit", img:"", tags:["Medicines"], id:"medical-kit", notes:"+HP 100 • Max Uses 5 • Stamina -100", sell:"$500", buy:"$1,000" },
