--- a/collectibles.html
+++ b/collectibles.html
@@ -81,28 +81,28 @@
   <script>
     const items = [
       // Neon Signs (from official page layout)
-      { name:"Skull", img:"skull neon.png", tags:["Neon Signs"], notes:"Red", id:"skull-neon", buy:null, sell:null },
-      { name:"Pineapple", img:"pineapple neon.png", tags:["Neon Signs"], notes:"Yellow/Green", id:"pineapple-neon", buy:null, sell:null  },
-      { name:"Kitty", img:"kitty neon.png", tags:["Neon Signs"], notes:"Pink", id:"kitty-neon", buy:null, sell:null  },
-      { name:"Dinosaur", img:"dinosaur neon.png", tags:["Neon Signs"], notes:"Green", id:"dinosaur-neon", buy:null, sell:null  },
-      { name:"Dragon", img:"dragon neon.png", tags:["Neon Signs"], notes:"Green/Red/Yellow", id:"dragon-neon", buy:null, sell:null  },
+      { name:"Skull", img:"skull neon.png", tags:["Neon Signs"], notes:"Red", id:"skull-neon", buy:null, sell:-- },
+      { name:"Pineapple", img:"pineapple neon.png", tags:["Neon Signs"], notes:"Yellow/Green", id:"pineapple-neon", buy:null, sell:--  },
+      { name:"Kitty", img:"kitty neon.png", tags:["Neon Signs"], notes:"Pink", id:"kitty-neon", buy:null, sell:--  },
+      { name:"Dinosaur", img:"dinosaur neon.png", tags:["Neon Signs"], notes:"Green", id:"dinosaur-neon", buy:null, sell:--  },
+      { name:"Dragon", img:"dragon neon.png", tags:["Neon Signs"], notes:"Green/Red/Yellow", id:"dragon-neon", buy:null, sell:--  },
 
       // Lamps
-      { name:"Desk Lamp", img:"desk lamp.png", tags:["Lamps"], notes:"Green", id:"desk-lamp", buy:null, sell:null  },
-      { name:"Cactus Nightlight", img:"cactus nightlight.png", tags:["Lamps"], notes:"Green", id:"cactus-nightlight", buy:null, sell:null  },
-      { name:"Spooky Lamp", img:"spooky lamp.png", tags:["Lamps"], notes:"Red", id:"spooky-lamp", buy:null, sell:null  },
-      { name:"Luxo Lamp", img:"luxo lamp.png", tags:["Lamps"], notes:"White", id:"luxo-lamp", buy:null, sell:null  },
+      { name:"Desk Lamp", img:"desk lamp.png", tags:["Lamps"], notes:"Green", id:"desk-lamp", buy:null, sell:--  },
+      { name:"Cactus Nightlight", img:"cactus nightlight.png", tags:["Lamps"], notes:"Green", id:"cactus-nightlight", buy:null, sell:--  },
+      { name:"Spooky Lamp", img:"spooky lamp.png", tags:["Lamps"], notes:"Red", id:"spooky-lamp", buy:null, sell:--  },
+      { name:"Luxo Lamp", img:"luxo lamp.png", tags:["Lamps"], notes:"White", id:"luxo-lamp", buy:null, sell:--  },
 
       // Posters, Signs & Paintings
-      { name:"QR Sign", img:"qr sign.png", tags:["Posters, Signs & Paintings"], notes:"Scannable QR code", id:"qr-sign", buy:null, sell:null  },
-      { name:"Small Sign", img:"small sign.png", tags:["Posters, Signs & Paintings"], notes:'"Face Mask Required"', id:"small-sign", buy:null, sell:null  },
-      { name:"No Firearms Sign", img:"no firearms sign.png", tags:["Posters, Signs & Paintings"], notes:'"No Firearms or Weapons Permitted On This Property"', id:"no-firearms-sign", buy:null, sell:null  },
-      { name:"Poster (Get Back To Work)", img:"poster1.png", tags:["Posters, Signs & Paintings"], notes:'"Get Back To Work"', id:"poster-get-back-to-work", buy:null, sell:null  },
-      { name:"Poster (Stonks)", img:"poster2.png", tags:["Posters, Signs & Paintings"], notes:'P/L graph of "stonks"', id:"poster-stonks", buy:null, sell:null  },
-      { name:"Poster (Profits)", img:"poster3.png", tags:["Posters, Signs & Paintings"], notes:'"Profits"', id:"poster-profits", buy:null, sell:null  },
-      { name:"Painting (Lonely Tree)", img:"painting1.png", tags:["Posters, Signs & Paintings"], notes:"A single lonely tree", id:"painting-lonely-tree", buy:null, sell:null  },
-      { name:"Painting (Geometric)", img:"painting2.png", tags:["Posters, Signs & Paintings"], notes:"Geometric shapes/triangles", id:"painting-geometric", buy:null, sell:null  },
-      { name:"Painting (Umbrella)", img:"painting3.png", tags:["Posters, Signs & Paintings"], notes:"Two people under an umbrella", id:"painting-umbrella", buy:null, sell:null  },
+      { name:"QR Sign", img:"qr sign.png", tags:["Posters, Signs & Paintings"], notes:"Scannable QR code", id:"qr-sign", buy:null, sell:--  },
+      { name:"Small Sign", img:"small sign.png", tags:["Posters, Signs & Paintings"], notes:'"Face Mask Required"', id:"small-sign", buy:null, sell:--  },
+      { name:"No Firearms Sign", img:"no firearms sign.png", tags:["Posters, Signs & Paintings"], notes:'"No Firearms or Weapons Permitted On This Property"', id:"no-firearms-sign", buy:null, sell:--  },
+      { name:"Poster (Get Back To Work)", img:"poster1.png", tags:["Posters, Signs & Paintings"], notes:'"Get Back To Work"', id:"poster-get-back-to-work", buy:null, sell:--  },
+      { name:"Poster (Stonks)", img:"poster2.png", tags:["Posters, Signs & Paintings"], notes:'P/L graph of "stonks"', id:"poster-stonks", buy:null, sell:--  },
+      { name:"Poster (Profits)", img:"poster3.png", tags:["Posters, Signs & Paintings"], notes:'"Profits"', id:"poster-profits", buy:null, sell:--  },
+      { name:"Painting (Lonely Tree)", img:"painting1.png", tags:["Posters, Signs & Paintings"], notes:"A single lonely tree", id:"painting-lonely-tree", buy:null, sell:--  },
+      { name:"Painting (Geometric)", img:"painting2.png", tags:["Posters, Signs & Paintings"], notes:"Geometric shapes/triangles", id:"painting-geometric", buy:null, sell:--  },
+      { name:"Painting (Umbrella)", img:"painting3.png", tags:["Posters, Signs & Paintings"], notes:"Two people under an umbrella", id:"painting-umbrella", buy:null, sell:--  },
 
       // Toys section exists on official page; items not shown in the snippet we pulled.
       { name:"Toys (section)", img:"", tags:["Toys"], notes:"Official page has a Toys section (add items here).", id:"toys-section" }
