--- a/armor.html
+++ b/armor.html
@@ -75,22 +75,22 @@ FILE: armor.html
   <script>
     // From your provided official wiki table
     const DATA = [
-      { name:"Apocalypse Vest", image:"apoc_black.png", tags:["Heavy"], sub:"Hotbar 7 • Max 25kg • Cap 2x8", notes:"Armor 10 / AP 5 • Colors: Black, Blue, Green, Desert" },
-      { name:"Banana Suit", image:"banana_suit.jpg", tags:["Full Body"], sub:"Hotbar 4", notes:"(stats N/A)" },
-      { name:"Cat Pajama", image:"cat_pajama_pink.png", tags:["Full Body"], sub:"Hotbar 4", notes:"Colors: Pink (more exist)" },
-      { name:"Composite Armor", image:"composite_armor_blue.jpg", tags:["Full Body"], sub:"Hotbar 4", notes:"Armor 18 / AP 0 • Colors: Blue, Yellow" },
-      { name:"Dinosaur Pajama", image:"dinosaur_pajama_brown.jpg", tags:["Full Body"], sub:"Hotbar 4", notes:"Colors: Brown (more exist)" },
-      { name:"Heavy Vest", image:"heavy_green.png", tags:["Heavy"], sub:"Hotbar 7 • Max 25kg • Cap 2x8", notes:"Armor 10 / AP 5 • Colors: Flat Green, Jungle, Desert, Snowy" },
-      { name:"Hot Dog Suit", image:"hot_dog_suit_new.jpg", tags:["Full Body"], sub:"Hotbar 4", notes:"2 variants: New, Damaged" },
-      { name:"Karuta Armor", image:"karuta_armor_yellow.jpg", tags:["Full Body"], sub:"Hotbar 4", notes:"Armor 18 / AP 0 • Colors: Red, Green, Yellow, Blue" },
-      { name:"Karuta Armor (Samurai)", image:"karuta_armor_samurai.jpg", tags:["Full Body"], sub:"Hotbar 4", notes:"Armor 18 / AP 0" },
-      { name:"Light Vest", image:"light_green.png", tags:["Light"], sub:"Hotbar 4", notes:"Armor 4 / AP 0 • Colors: Flat Green, Jungle, Desert, Snowy" },
-      { name:"Medium Vest", image:"medium_green.png", tags:["Medium"], sub:"Hotbar 5 • Max 10kg • Cap 1x8", notes:"Armor 7 / AP 2 • Colors: Flat Green, Jungle, Desert, Snowy" },
-      { name:"Metal Armor", image:"Metal_Armor.png", tags:["Light"], sub:"Hotbar 4", notes:"Armor 15 / AP 5 • Colors: Grey, Silver, White, Green, Red" },
-      { name:"Press Vest", image:"press_vest.jpg", tags:["Medium"], sub:"Hotbar 5 • Max 12.5kg • Cap 1x8+4", notes:"Armor 7 / AP 2" },
-      { name:"SWAT Vest", image:"Swat.png", tags:["Medium"], sub:"Hotbar 6 • Max 15kg • Cap 2x8", notes:"Armor 7 / AP 3" },
-      { name:"Tech Armor", image:"tech_armor_white.jpg", tags:["Full Body"], sub:"Hotbar 4", notes:"Armor 18 / AP 0 • Colors: Blue, Black, Red, White" },
-      { name:"Tiger Pajama", image:"tiger_pajama_orange.jpg", tags:["Full Body"], sub:"Hotbar 4", notes:"Colors: Green, Orange" }
+      { name:"Apocalypse Vest", image:"apoc_black.png", tags:["Heavy"], sub:"Hotbar 7 • Max 25kg • Cap 2x8", id:"apocalypse-vest", notes:"Armor 10 / AP 5 • Colors: Black, Blue, Green, Desert", buy:null, sell:--   },
+      { name:"Banana Suit", image:"banana_suit.jpg", tags:["Full Body"], sub:"Hotbar 4", id:"banana-suit", notes:"(stats N/A)", buy:null, sell:--   },
+      { name:"Cat Pajama", image:"cat_pajama_pink.png", tags:["Full Body"], sub:"Hotbar 4", id:"cat-pajama", notes:"Colors: Pink (more exist)", buy:null, sell:--   },
+      { name:"Composite Armor", image:"composite_armor_blue.jpg", tags:["Full Body"], sub:"Hotbar 4", id:"composite-armor", notes:"Armor 18 / AP 0 • Colors: Blue, Yellow", buy:null, sell:--   },
+      { name:"Dinosaur Pajama", image:"dinosaur_pajama_brown.jpg", tags:["Full Body"], sub:"Hotbar 4",  id:"dinosaur-pajama",notes:"Colors: Brown (more exist)", buy:null, sell:--   },
+      { name:"Heavy Vest", image:"heavy_green.png", tags:["Heavy"], sub:"Hotbar 7 • Max 25kg • Cap 2x8", id:"heavy-vest", notes:"Armor 10 / AP 5 • Colors: Flat Green, Jungle, Desert, Snowy", buy:null, sell:--   },
+      { name:"Hot Dog Suit", image:"hot_dog_suit_new.jpg", tags:["Full Body"], sub:"Hotbar 4", id:"hot-dog-suit", notes:"2 variants: New, Damaged", buy:null, sell:--   },
+      { name:"Karuta Armor", image:"karuta_armor_yellow.jpg", tags:["Full Body"], sub:"Hotbar 4", id:"karurta-armor", notes:"Armor 18 / AP 0 • Colors: Red, Green, Yellow, Blue", buy:null, sell:--   },
+      { name:"Karuta Armor (Samurai)", image:"karuta_armor_samurai.jpg", tags:["Full Body"], sub:"Hotbar 4", id:"karuta-armor",notes:"Armor 18 / AP 0", buy:null, sell:--   },
+      { name:"Light Vest", image:"light_green.png", tags:["Light"], sub:"Hotbar 4", id:"light-vest",  notes:"Armor 4 / AP 0 • Colors: Flat Green, Jungle, Desert, Snowy", buy:null, sell:--  },
+      { name:"Medium Vest", image:"medium_green.png", tags:["Medium"], sub:"Hotbar 5 • Max 10kg • Cap 1x8", id:"medium-vest", notes:"Armor 7 / AP 2 • Colors: Flat Green, Jungle, Desert, Snowy", buy:null, sell:--  },
+      { name:"Metal Armor", image:"Metal_Armor.png", tags:["Light"], sub:"Hotbar 4", id:"light-vest",notes:"Armor 15 / AP 5 • Colors: Grey, Silver, White, Green, Red", buy:null, sell:--   },
+      { name:"Press Vest", image:"press_vest.jpg", tags:["Medium"], sub:"Hotbar 5 • Max 12.5kg • Cap 1x8+4", id:"press-vest",notes:"Armor 7 / AP 2", buy:null, sell:--   },
+      { name:"SWAT Vest", image:"Swat.png", tags:["Medium"], sub:"Hotbar 6 • Max 15kg • Cap 2x8", id:"light-vest",notes:"Armor 7 / AP 3", buy:null, sell:--   },
+      { name:"Tech Armor", image:"tech_armor_white.jpg", tags:["Full Body"], sub:"Hotbar 4", id:"tech-armo",notes:"Armor 18 / AP 0 • Colors: Blue, Black, Red, White", buy:null, sell:--   },
+      { name:"Tiger Pajama", image:"tiger_pajama_orange.jpg", tags:["Full Body"], sub:"Hotbar 4", id:"tiger-paja",notes:"Colors: Green, Orange", buy:null, sell:--   }
     ];
 
     const COLUMNS = [
