--- a/backpacks.html
+++ b/backpacks.html
@@ -82,21 +82,21 @@
   <script>
     const items = [
       // Tier 3
-      { name:"Raid Backpack", img:"TM_BackpackRaid_1_E.png", tags:["Tier 3"], id:"raid-backpack", notes:"Main 120 • Extra 32 • Total 152" buy:null, sell:--  },
-      { name:"Rush Backpack (Gold Variant)", img:"TM_BackpackRushGold_E.png", tags:["Tier 3"], id:"rush-backpack-gold-variant", notes:"Main 64 • Extra 24 • Total 88" buy:null, sell:--  },
-      { name:"Overland Backpack", img:"TM_BackpackOverlandWhite_E.png", tags:["Tier 3"], id:"overland-backpack", notes:"Main 64 • Extra 23 • Total 87" buy:null, sell:--  },
-      { name:"Nomad Backpack", img:"TM_BackpackNomad1_E.png", tags:["Tier 3"], id:"nomad-backpack", notes:"Main 48 • Extra 31 • Total 79" buy:null, sell:--  },
-      { name:"Rush Backpack (Normal Variant)", img:"TM_BackpackRush_E.png", tags:["Tier 3"], id:"rush-backpack-normal-variant", notes:"Main 48 • Extra 16 • Total 64" buy:null, sell:--  },
-      { name:"Expedition Backpack", img:"Backpack_Expedition_Red.png", tags:["Tier 3"], id:"expedition-backpack", notes:"Main 48 • Extra 8 • Total 56" buy:null, sell:--  },
+      { name:"Raid Backpack", img:"TM_BackpackRaid_1_E.png", tags:["Tier 3"], id:"raid-backpack", notes:"Main 120 • Extra 32 • Total 152" buy:null, sell:"—" },
+      { name:"Rush Backpack (Gold Variant)", img:"TM_BackpackRushGold_E.png", tags:["Tier 3"], id:"rush-backpack-gold-variant", notes:"Main 64 • Extra 24 • Total 88" buy:null, sell:"—" },
+      { name:"Overland Backpack", img:"TM_BackpackOverlandWhite_E.png", tags:["Tier 3"], id:"overland-backpack", notes:"Main 64 • Extra 23 • Total 87" buy:null, sell:"—" },
+      { name:"Nomad Backpack", img:"TM_BackpackNomad1_E.png", tags:["Tier 3"], id:"nomad-backpack", notes:"Main 48 • Extra 31 • Total 79" buy:null, sell:"—" },
+      { name:"Rush Backpack (Normal Variant)", img:"TM_BackpackRush_E.png", tags:["Tier 3"], id:"rush-backpack-normal-variant", notes:"Main 48 • Extra 16 • Total 64" buy:null, sell:"—" },
+      { name:"Expedition Backpack", img:"Backpack_Expedition_Red.png", tags:["Tier 3"], id:"expedition-backpack", notes:"Main 48 • Extra 8 • Total 56" buy:null, sell:"—" },
 
       // Tier 2
-      { name:"Hunting Backpack", img:"Backpack_Hunting_LightGreen.png", tags:["Tier 2"], id:"hunting-backpack", notes:"Main 42 • Extra 0 • Total 42" buy:null, sell:--  },
-      { name:"Topload Backpack", img:"Backpack_Topload_1.png", tags:["Tier 2"], id:"topload-backpack", notes:"Main 42 • Extra 0 • Total 42" buy:null, sell:--  },
+      { name:"Hunting Backpack", img:"Backpack_Hunting_LightGreen.png", tags:["Tier 2"], id:"hunting-backpack", notes:"Main 42 • Extra 0 • Total 42" buy:null, sell:"—" },
+      { name:"Topload Backpack", img:"Backpack_Topload_1.png", tags:["Tier 2"], id:"topload-backpack", notes:"Main 42 • Extra 0 • Total 42" buy:null, sell:"—" },
 
       // Tier 1
-      { name:"Cute Backpack", img:"Backpack_Buzzy.png", tags:["Tier 1"], id:"cute-backpack", notes:"Main 16 • Extra 0 • Total 16" buy:null, sell:--  },
-      { name:"School Backpack", img:"Backpack_School_Blue.png", tags:["Tier 1"], id:"school-backpack", notes:"Main 16 • Extra 0 • Total 16" buy:null, sell:--  },
-      { name:"Bag", img:"TM_Bag_E.png", tags:["Tier 1"], id:"bag", notes:"Main 9 • Extra 0 • Total 9" buy:null, sell:--  }
+      { name:"Cute Backpack", img:"Backpack_Buzzy.png", tags:["Tier 1"], id:"cute-backpack", notes:"Main 16 • Extra 0 • Total 16" buy:null, sell:"—" },
+      { name:"School Backpack", img:"Backpack_School_Blue.png", tags:["Tier 1"], id:"school-backpack", notes:"Main 16 • Extra 0 • Total 16" buy:null, sell:"—" },
+      { name:"Bag", img:"TM_Bag_E.png", tags:["Tier 1"], id:"bag", notes:"Main 9 • Extra 0 • Total 9" buy:null, sell:"—" }
     ];
 
     const columns = [
