--- a/masks.html
+++ b/masks.html
@@ -35,8 +35,8 @@ With filtering by section
         <div class="nav">
           <a href="wiki.html"><span>Hub</span><span class="small">→</span></a>
           <a href="weapons.html"><span>Weapons</span><span class="small">→</span></a>
-          <a class="active" href="masks.html"><span>Masks</span><span class="small">→</span></a>
-          <a href="armor.html"><span>Armor</span><span class="small">→</span></a>
+          <a href="masks.html"><span>Masks</span><span class="small">→</span></a>
+          <a class="active" href="armor.html"><span>Armor</span><span class="small">→</span></a>
           <a href="ammo.html"><span>Ammo</span><span class="small">→</span></a>
           <a href="helmets.html"><span>Helmets</span><span class="small">→</span></a>
           <a href="consumables.html"><span>Consumables</span><span class="small">→</span></a>
