--- a/crafting.html
+++ b/crafting.html
@@ -28,7 +28,7 @@
           <a href="wiki.html"><span>Hub</span><span class="small">→</span></a>
           <a href="weapons.html"><span>Weapons</span><span class="small">→</span></a>
           <a href="masks.html"><span>Masks</span><span class="small">→</span></a>
-          <a class="active" href="crafting.html"><span>crafting</span><span class="small">→</span></a>
+          <a class="active" href="crafting.html"><span>Crafting</span><span class="small">→</span></a>
           <a href="ammo.html"><span>Ammo</span><span class="small">→</span></a>
           <a href="helmets.html"><span>Helmets</span><span class="small">→</span></a>
           <a href="consumables.html"><span>Consumables</span><span class="small">→</span></a>
