--- a/consumables.html
+++ b/consumables.html
@@ -30,9 +30,9 @@
           <a href="masks.html"><span>Masks</span><span class="small">→</span></a>
           <a href="armor.html"><span>Armor</span><span class="small">→</span></a>
           <a href="ammo.html"><span>Ammo</span><span class="small">→</span></a>
-          <a href="crafting.html"><span>Crafting</span><span class="small">→</span></a>
+          <a href="helmets.html"><span>Helmets</span><span class="small">→</span></a>
           <a class="active" href="consumables.html"><span>Consumables</span><span class="small">→</span></a>
-          <a href="crafting.html"><span>Backpacks</span><span class="small">→</span></a>
+          <a href="crafting.html"><span>Crafting</span><span class="small">→</span></a>
           <a href="backpacks.html"><span>Backpacks</span><span class="small">→</span></a>
           <a href="collectibles.html"><span>Collectibles</span><span class="small">→</span></a>
         </div>
