--- a/backpacks.html
+++ b/backpacks.html
@@ -25,15 +25,16 @@
         <h2>Wiki Categories</h2>
         <div class="muted">Local pages (fast) + one official button above.</div>
         <div class="nav">
+          <a class="active" href="backpacks.html"><span>Backpacks</span><span class="small">→</span></a>
           <a href="wiki.html"><span>Hub</span><span class="small">→</span></a>
           <a href="weapons.html"><span>Weapons</span><span class="small">→</span></a>
           <a href="masks.html"><span>Masks</span><span class="small">→</span></a>
-          <a class="active" href="backpacks.html"><span>Backpacks</span><span class="small">→</span></a>
+          <a href="armor.html"><span>Armor</span><span class="small">→</span></a>
           <a href="ammo.html"><span>Ammo</span><span class="small">→</span></a>
-          <a href="helmets.html"><span>Helmets</span><span class="small">→</span></a>
-          <a href="consumables.html"><span>Consumables</span><span class="small">→</span></a>
           <a href="crafting.html"><span>Crafting</span><span class="small">→</span></a>
-          <a href="armor.html"><span>armor</span><span class="small">→</span></a>
+          <a href="consumables.html"><span>Consumables</span><span class="small">→</span></a>
+          <a href="crafting.html"><span>Backpacks</span><span class="small">→</span></a>
+          <a class="active" href="backpacks.html"><span>Backpacks</span><span class="small">→</span></a>
           <a href="collectibles.html"><span>Collectibles</span><span class="small">→</span></a>
         </div>
 
