--- a/wiki.html
+++ b/wiki.html
@@ -27,6 +27,10 @@
 
         <div class="nav">
           <a class="active" href="wiki.html"><span>Hub</span><span class="small">→</span></a>
+          <a href="weapons.html"><span>Weapons</span><span class="small">→</span></a>
+          <a class="active" href="masks.html"><span>Masks</span><span class="small">→</span></a>
+          <a href="armor.html"><span>Armor</span><span class="small">→</span></a>
+          <a href="ammo.html"><span>Ammo</span><span class="small">→</span></a>
           <a href="helmets.html"><span>Helmets</span><span class="small">→</span></a>
           <a href="consumables.html"><span>Consumables</span><span class="small">→</span></a>
           <a href="crafting.html"><span>Crafting</span><span class="small">→</span></a>
