--- a/tips.html
+++ b/tips.html
@@ -363,14 +363,14 @@
     <div id="cards" class="grid"></div>
 
     <div class="footer">
-      Want to add tips? Edit <code>tips.html</code> → the <code>tipsData</code> array near the bottom.
-      Guides live in <code>guidesData</code>.
+     Want to add tips? Join the Deadpoly Discord <Link>https://discord.com/invite/DeadPoly</Link> and let us know in #Tips n Tricks
     </div>
   </div>
 
   <script>
     // ===================== Guides (optional) =====================
     // Add/remove as needed. Links can point to your own pages later.
+    // Want to add tips? Edit <code>tips.html</code> → the <code>tipsData</code> array near the bottom.    Guides live in <code>guidesData</code>.
     const guidesData = [
       {
         title: "Beggining of the End",
@@ -432,7 +432,7 @@
         tags: ["Vehicles", "Map"],
         bullets: [
           "Check a few reliable spawn clusters rather than driving the whole map.",
-          "If you find one, mark the spot and the nearest safe refuel/repair area."
+          "If you find one, mark the spot and the fill all spark plug slots."
         ]
       },
       {
@@ -440,7 +440,7 @@
         tags: ["Hunting", "Food"],
         bullets: [
           "Rotate zones—don’t camp one area forever.",
-          "If your server is busy, hunt off-peak or deeper routes."
+          "If your server is busy, try hunting player."
         ],
         links: [
           { label: "DeadPoly Wiki — Main Page", url: "https://deadpoly.wiki/Main_Page" }
