--- a/wiki.html
+++ b/wiki.html
@@ -11,7 +11,7 @@
     <div class="topbar-inner">
       <div class="top-left">
         <a class="btn" href="index.html">← Menu</a>
-        <div class="brand">Wiki <span class="badge">Hub</span> <span clas="badge"> <b>WORK in PROGRESS (Some things are incorrect)<b></span> <div>
+        <div class="brand">Wiki <span class="badge">Hub</span> <span clas="badge"> <b>(WIP)<b></span> <div>
       </div>
       <div class="top-right">
         <a class="btn" href="https://deadpoly.wiki/Main_Page" target="_blank" rel="noopener">Official Wiki ↗</a>
@@ -43,6 +43,7 @@
           <div class="small" style="margin-top:6px">
             If images don’t show: you’re offline or a mixed-content blocker is on. Images are hotlinked from
             <span class="code">deadpoly.wiki/Special:FilePath</span>.
+            <b>Please keep in mind some data is going to be incorrect and or broken.</b>
           </div>
         </div>
       </div>
