--- a/index.html
+++ b/index.html
@@ -100,16 +100,17 @@ body {
   <div class="credits">Credits</div>
 
   <div class="socials">
-    <a href="https://discord.com/invite/DeadPoly" target="_blank"><img src="assets/discord.png"></a>
-    <a href="https://www.youtube.com/@PlayDeadPoly" target="_blank"><img src="assets/youtube.png"></a>
-    <a href="https://store.steampowered.com/app/1621070/DeadPoly/" target="_blank"><img src="assets/steam.png"></a>
-    <a href="https://store.epicgames.com/en-US/p/deadpoly-bce932" target="_blank"><img src="assets/epic.png"></a>
+    <a href="https://discord.com/invite/DeadPoly" target="_blank"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmzShsYG0UebR3XWCgBA1eM6g0EvSmif5kKQ&s"></a>
+    <a href="https://www.youtube.com/@PlayDeadPoly" target="_blank"><img src="https://toppng.com/uploads/preview/youtube-logo-11609383902z56yosfap9.png"></a>
+    <a href="https://store.steampowered.com/app/1621070/DeadPoly/" target="_blank"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTi_HTqOkI6MNfXfytgF2fTYecvkBQs3ZkI2w&s"></a>
+    <a href="https://store.epicgames.com/en-US/p/deadpoly-bce932" target="_blank"><img src="https://cdn2.unrealengine.com/Unreal+Engine%2Feg-logo-filled-1255x1272-0eb9d144a0f981d1cbaaa1eb957de7a3207b31bb.png"></a>
     <a href="https://deadpoly.com/" target="_blank"><img src="assets/deadpoly_box_full-wht.png"></a>
   </div>
 </div>
 
 </body>
 </html>
+
 
 
 
