--- a/wiki.html
+++ b/wiki.html
@@ -11,7 +11,7 @@
     <div class="topbar-inner">
       <div class="top-left">
         <a class="btn" href="index.html">← Menu</a>
-        <div class="brand">Wiki <span class="badge">Hub</span><div>
+        <div class="brand">Wiki <span class="badge">Hub</span> <span class="badge"><b>Work In Progress</b></span> </div>
       </div>
       <div class="top-right">
         <a class="btn" href="https://deadpoly.wiki/Main_Page" target="_blank" rel="noopener">Official Wiki ↗</a>
