--- a/backpacks.html
+++ b/backpacks.html
@@ -1,3 +1,11 @@
+<!-- =========================
+     backpacks.html (REDO)
+     - Fixed broken JS (your objects were missing commas after notes strings)
+     - Fixed img -> image
+     - Fixed nav duplicates + wrong hrefs
+     - Buy/Sell shows ("—" placeholder)
+     - Images hotlink via Special:FilePath
+     ========================= -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -32,14 +40,13 @@
           <a href="ammo.html"><span>Ammo</span><span class="small">→</span></a>
           <a href="helmets.html"><span>Helmets</span><span class="small">→</span></a>
           <a href="consumables.html"><span>Consumables</span><span class="small">→</span></a>
-         <a href="crafting.html"><span>Crafting</span><span class="small">→</span></a>
-          <a href="crafting.html"><span>Backpacks</span><span class="small">→</span></a>
+          <a href="crafting.html"><span>Crafting</span><span class="small">→</span></a>
           <a class="active" href="backpacks.html"><span>Backpacks</span><span class="small">→</span></a>
           <a href="collectibles.html"><span>Collectibles</span><span class="small">→</span></a>
         </div>
 
         <div class="note">
-          <b>Nesting rules:</b> you can store lower-tier bags inside higher-tier bags, but not same-size.
+          <b>Nesting rules:</b> lower-tier bags can go inside higher-tier bags, but not same-size.
         </div>
       </div>
 
@@ -47,7 +54,7 @@
         <div class="hero">
           <div>
             <h1>Backpacks</h1>
-            <div class="sub">Tier lists + total slots. Buy/Sell fields included for you to fill later if you want.</div>
+            <div class="sub">Tiers + total slots. Images hotlinked from the official wiki.</div>
           </div>
           <div class="badge" id="countBadge">0 items</div>
         </div>
@@ -85,30 +92,35 @@
 
   <script src="wiki-shared.js"></script>
   <script>
+    // FIXES APPLIED:
+    // - `image` used consistently (not `img`)
+    // - commas added after notes fields (your prior JS would crash and show 0 items)
+    // - buy/sell use "—" by default
+
     const items = [
       // Tier 3
-      { name:"Raid Backpack", img:"TM_BackpackRaid_1_E.png", tags:["Tier 3"], id:"raid-backpack", notes:"Main 120 • Extra 32 • Total 152" buy:null, sell:"—" },
-      { name:"Rush Backpack (Gold Variant)", img:"TM_BackpackRushGold_E.png", tags:["Tier 3"], id:"rush-backpack-gold-variant", notes:"Main 64 • Extra 24 • Total 88" buy:null, sell:"—" },
-      { name:"Overland Backpack", img:"TM_BackpackOverlandWhite_E.png", tags:["Tier 3"], id:"overland-backpack", notes:"Main 64 • Extra 23 • Total 87" buy:null, sell:"—" },
-      { name:"Nomad Backpack", img:"TM_BackpackNomad1_E.png", tags:["Tier 3"], id:"nomad-backpack", notes:"Main 48 • Extra 31 • Total 79" buy:null, sell:"—" },
-      { name:"Rush Backpack (Normal Variant)", img:"TM_BackpackRush_E.png", tags:["Tier 3"], id:"rush-backpack-normal-variant", notes:"Main 48 • Extra 16 • Total 64" buy:null, sell:"—" },
-      { name:"Expedition Backpack", img:"Backpack_Expedition_Red.png", tags:["Tier 3"], id:"expedition-backpack", notes:"Main 48 • Extra 8 • Total 56" buy:null, sell:"—" },
+      { name:"Raid Backpack", image:"TM_BackpackRaid_1_E.png", tags:["Tier 3"], id:"raid-backpack", notes:"Main 120 • Extra 32 • Total 152", buy:"—", sell:"—" },
+      { name:"Rush Backpack (Gold Variant)", image:"TM_BackpackRushGold_E.png", tags:["Tier 3"], id:"rush-backpack-gold-variant", notes:"Main 64 • Extra 24 • Total 88", buy:"—", sell:"—" },
+      { name:"Overland Backpack", image:"TM_BackpackOverlandWhite_E.png", tags:["Tier 3"], id:"overland-backpack", notes:"Main 64 • Extra 23 • Total 87", buy:"—", sell:"—" },
+      { name:"Nomad Backpack", image:"TM_BackpackNomad1_E.png", tags:["Tier 3"], id:"nomad-backpack", notes:"Main 48 • Extra 31 • Total 79", buy:"—", sell:"—" },
+      { name:"Rush Backpack (Normal Variant)", image:"TM_BackpackRush_E.png", tags:["Tier 3"], id:"rush-backpack-normal-variant", notes:"Main 48 • Extra 16 • Total 64", buy:"—", sell:"—" },
+      { name:"Expedition Backpack", image:"Backpack_Expedition_Red.png", tags:["Tier 3"], id:"expedition-backpack", notes:"Main 48 • Extra 8 • Total 56", buy:"—", sell:"—" },
 
       // Tier 2
-      { name:"Hunting Backpack", img:"Backpack_Hunting_LightGreen.png", tags:["Tier 2"], id:"hunting-backpack", notes:"Main 42 • Extra 0 • Total 42" buy:null, sell:"—" },
-      { name:"Topload Backpack", img:"Backpack_Topload_1.png", tags:["Tier 2"], id:"topload-backpack", notes:"Main 42 • Extra 0 • Total 42" buy:null, sell:"—" },
+      { name:"Hunting Backpack", image:"Backpack_Hunting_LightGreen.png", tags:["Tier 2"], id:"hunting-backpack", notes:"Main 42 • Extra 0 • Total 42", buy:"—", sell:"—" },
+      { name:"Topload Backpack", image:"Backpack_Topload_1.png", tags:["Tier 2"], id:"topload-backpack", notes:"Main 42 • Extra 0 • Total 42", buy:"—", sell:"—" },
 
       // Tier 1
-      { name:"Cute Backpack", img:"Backpack_Buzzy.png", tags:["Tier 1"], id:"cute-backpack", notes:"Main 16 • Extra 0 • Total 16" buy:null, sell:"—" },
-      { name:"School Backpack", img:"Backpack_School_Blue.png", tags:["Tier 1"], id:"school-backpack", notes:"Main 16 • Extra 0 • Total 16" buy:null, sell:"—" },
-      { name:"Bag", img:"TM_Bag_E.png", tags:["Tier 1"], id:"bag", notes:"Main 9 • Extra 0 • Total 9" buy:null, sell:"—" }
+      { name:"Cute Backpack", image:"Backpack_Buzzy.png", tags:["Tier 1"], id:"cute-backpack", notes:"Main 16 • Extra 0 • Total 16", buy:"—", sell:"—" },
+      { name:"School Backpack", image:"Backpack_School_Blue.png", tags:["Tier 1"], id:"school-backpack", notes:"Main 16 • Extra 0 • Total 16", buy:"—", sell:"—" },
+      { name:"Bag", image:"TM_Bag_E.png", tags:["Tier 1"], id:"bag", notes:"Main 9 • Extra 0 • Total 9", buy:"—", sell:"—" }
     ];
 
     const columns = [
-      { key:"img", label:"Image" },
+      { key:"img",  label:"Image" },
       { key:"name", label:"Name" },
-      { key:"notes", label:"Slots / Notes" },
-      { key:"buy", label:"Buy" },
+      { key:"notes",label:"Slots / Notes" },
+      { key:"buy",  label:"Buy" },
       { key:"sell", label:"Sell" }
     ];
 
